<resources>
    <string name="app_name">Activity Recognition</string>
    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="log">Log</string>
    <string name="none">None</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="forth">4</string>
    <string name="classifier">Classifier</string>
    <string name="sound">Sound</string>
    <string name="model">model</string>
    <string name="accelerometer">Accelerometer</string>

</resources>

